Add a pic to the river-course-tool README

--- a/river-course-tool/README.adoc
+++ b/river-course-tool/README.adoc
@@ -83,3 +83,6 @@ Here's a sample of it:
    "properties":{}}]}
 ----
 
+In a GEOJson render this looks like...
+
+::image:teith-geojson-output.png[]
